# product-generator

./: LICENSE  MANIFEST.in  README.md  example.py  pyproject.toml  requirements.txt  running.py
product_generator/: __init__.py  generator.py
productgen/: __init__.py  ai_generator.py  analyzer.py  api.py  generator.py  product_manager.py  recommender.py  seo_optimizer.py
productgen.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
productgen/data/: marketing_taglines.json  product_brands.json  product_categories.json  templates.json
tests/: test_ai_product_generator.py  test_generator.py
